; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/tests/extr_kernel_tests.c_xnupost_register_panic_widget.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/tests/extr_kernel_tests.c_xnupost_register_panic_widget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8*, i8**, i32*, i32* }

@xt_panic_widgets = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@KERN_RESOURCE_SHORTAGE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xnupost_register_panic_widget(i32* %0, i8* %1, i8* %2, i8** %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i8**, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i8** %3, i8*** %9, align 8
  %10 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xt_panic_widgets, i32 0, i32 3), align 8
  %11 = icmp ne i32* %10, null
  br i1 %11, label %15, label %12

12:                                               ; preds = %4
  %13 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xt_panic_widgets, i32 0, i32 2), align 8
  %14 = icmp ne i32* %13, null
  br i1 %14, label %15, label %17

15:                                               ; preds = %12, %4
  %16 = load i32, i32* @KERN_RESOURCE_SHORTAGE, align 4
  store i32 %16, i32* %5, align 4
  br label %24

17:                                               ; preds = %12
  %18 = load i8*, i8** %8, align 8
  %19 = bitcast i8* %18 to i32*
  store i32* %19, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xt_panic_widgets, i32 0, i32 3), align 8
  %20 = load i32*, i32** %6, align 8
  store i32* %20, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xt_panic_widgets, i32 0, i32 2), align 8
  %21 = load i8*, i8** %7, align 8
  store i8* %21, i8** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xt_panic_widgets, i32 0, i32 0), align 8
  %22 = load i8**, i8*** %9, align 8
  store i8** %22, i8*** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @xt_panic_widgets, i32 0, i32 1), align 8
  %23 = load i32, i32* @KERN_SUCCESS, align 4
  store i32 %23, i32* %5, align 4
  br label %24

24:                                               ; preds = %17, %15
  %25 = load i32, i32* %5, align 4
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
